Fixed alignment for grid

--- a/app/styles/common/web/common.css
+++ b/app/styles/common/web/common.css
@@ -106,6 +106,7 @@
 }
 
 .k-grid {
+  width: 824px;
   font-size: 10px !important;
 }
 
