--- a/app/styles/portfolio/web/portfolio.css
+++ b/app/styles/portfolio/web/portfolio.css
@@ -138,7 +138,7 @@ table thead tr th, table tr td {
 }
 
 table {
-  width:826px;
+  width:824px;
 }
 
 .grid-additional-information-data {
